# rtmx

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .rtmx-skip-migration  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  deprecation.json  go.mod  gpg.key  pyproject.toml  rtmx.yaml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark-bless.yml  benchmark.yml  ci-test.yml  ci.yml  deploy-site.yml  docs-screenshots.yml  release.yml  rtmx-pr.yml  rtmx-validate.yml  security.yml
.rtmx/: config.yaml  database.csv
Formula/: rtmx.rb
benchmarks/: Makefile
benchmarks/configs/: cpp.yaml  csharp.yaml  dart.yaml  elixir.yaml  fortran.yaml  go.yaml  haskell.yaml  java.yaml  javascript.yaml  julia.yaml  kotlin.yaml  lua.yaml  perl.yaml  php.yaml  python.yaml  r.yaml  ruby.yaml  rust.yaml  scala.yaml  swift.yaml  tak-server.yaml  terraform.yaml  verilog.yaml
benchmarks/scripts/: report.sh  run-benchmark.sh
cmd/rtmx/: main.go
docs/: BENCHMARK_CANDIDATES.md  INTEGRITY_DESIGN.md  LIFECYCLE.md  MIGRATION.md  configuration.md  marker-schema.json  patterns.md  rtm_database.csv  schema.md
docs/adr/: 0001-csv-over-sqlite.md  0002-click-cli-framework.md  0003-lazy-imports.md  0004-pytest-markers-traceability.md  0005-adapter-pattern.md  ADR-006-npm-distribution.md
docs/api/: index.html  rtmx.html  search.js
docs/diagrams/: csv-diff.mmd  dev-loop.mmd  mcp-architecture.mmd  requirement-lifecycle.mmd
docs/tapes/: agent-loop.tape  commands.tape  mcp-setup.tape  mcp-status.sh  mcp-tools.sh  workflow.tape
features/: verify_results.feature
features/cli/: analyze.feature  auth.feature  backlog.feature  bootstrap.feature  config.feature  cycles.feature  deps.feature  diff.feature  docs.feature  from-tests.feature  health.feature  init.feature  install.feature  makefile.feature  mcp-server.feature  reconcile.feature  serve.feature  setup.feature  status.feature  sync.feature  tui.feature
features/lang/: python-dogfood.feature
features/verify/: cross-language.feature  results-format.feature
internal/adapters/: adapters_coverage_test.go  adapters_e2e_test.go  asana.go  asana_test.go  base.go  extract_test.go  github.go  github_test.go  gitlab.go  gitlab_test.go  http_test.go  jira.go  jira_test.go  monday.go  monday_test.go  slack.go  slack_test.go  webhook.go  webhook_test.go
internal/auth/: identity.go  identity_test.go  oidc.go  oidc_test.go  ziti.go  ziti_test.go
internal/benchmark/: config.go  config_test.go  regression.go  regression_test.go
internal/cmd/: analyze.go  analyze_test.go  assign.go  assign_test.go  auth.go  auth_test.go  backlog.go  backlog_test.go  bootstrap.go  bootstrap_test.go  config.go  context.go  context_test.go  coverage_test.go  cycles.go  cycles_test.go  deps.go  deps_test.go  diff.go  docs.go  filesystem_test.go  from_go.go  from_go_test.go  from_pytest.go  from_pytest_test.go  from_tests.go  from_tests_ada_test.go  from_tests_assembly_test.go  from_tests_cobol_test.go  from_tests_cpp_test.go  from_tests_csharp_test.go  from_tests_dart_test.go  from_tests_elixir_test.go  from_tests_fortran_test.go  from_tests_haskell_test.go  from_tests_java_test.go  from_tests_javascript_test.go  from_tests_js_test.go  from_tests_julia_test.go  from_tests_kotlin_test.go  (+77 more)
internal/config/: completeness_test.go  config.go  config_test.go  coverage_test.go  fuzz_test.go
internal/dashboard/: embed.go
internal/database/: coverage_test.go  csv.go  database.go  database_test.go  migration.go  migration_test.go  requirement.go
internal/graph/: coverage_test.go  graph.go  graph_test.go  web.go  web_test.go
internal/markers/: spec.go  spec_test.go
internal/orchestration/: claims.go  claims_test.go  worktree.go  worktree_test.go
internal/output/: coverage_test.go  format.go  format_test.go  table_test.go  terminal.go  terminal_test.go  terminal_unix.go  terminal_windows.go  tui.go  tui_test.go
internal/results/: schema.go  schema_reqid_test.go  schema_test.go  schema_vocab_test.go
internal/schema/: builtin_test.go  core.go  custom.go  do178c.go  iso26262.go  phoenix.go  registry.go  schema.go  schema_test.go
internal/sync/: adjudicate.go  adjudicate_test.go  (+10 more)
npm/: install.js  package.json
scripts/: apt-repo.sh  install.sh
specs/: TrustFederation.cfg  TrustFederation.tla
templates/: example.typ  rtmx-theme.typ  whitepaper.typ
test/: apt_repo_test.go  apt_test.go  benchmark_framework_test.go  branch_protection_test.go  ci_screenshots_test.go  ci_test.go  ci_validate_test.go  command_surface_test.go  coverage_gate_test.go  coveralls_test.go  deprecation_test.go  docker_test.go  homebrew_core_test.go  homebrew_test.go  integrity_test.go  launch_test.go  mainstream_dist_test.go  migration_test.go  npm_test.go  onboarding_e2e_test.go  parity_test.go  pypi_test.go  release_gate_test.go  release_publish_test.go  release_signing_test.go  release_test.go  scoop_test.go  security_injection_test.go  security_policy_test.go  security_supplychain_test.go  security_test.go  unit_coverage_test.go
tests/: conftest.py  test_adapters_coverage.py  test_adapters_integration.py  test_bdd_outline.py  test_bdd_parser.py  test_bdd_steps.py  test_claude_hooks.py  test_cli_additional.py  test_cli_commands.py  test_cli_integrate.py  test_cli_main.py  test_cli_misc.py  test_cli_setup.py  test_cli_sync.py  test_cli_ux.py  test_comparison.py  test_config_coverage.py  test_crdt.py  test_cross_repo.py  test_diff.py  test_docs_cmd.py  test_dx.py  test_e2e_commands.py  test_formatting_coverage.py  test_git_ops.py  test_git_ops_coverage.py  test_graph.py  test_graph_monte_carlo.py  test_health.py  test_health_coverage.py  test_hooks.py  test_integrate.py  test_lang_spec.py  test_lifecycle_e2e.py  test_mcp_coverage.py  test_mcp_e2e.py  test_migration.py  test_models.py  test_models_additional.py  test_models_coverage.py  (+14 more)
website/: astro.config.mjs  package-lock.json  package.json
(+580 files in other folders)
