[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtmx"
version = "0.0.2"
description = "Requirements Traceability Matrix toolkit for GenAI-driven development"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ioTACTICAL LLC", email = "engineering@iotactical.co" }
]
keywords = [
    "requirements",
    "traceability",
    "rtm",
    "testing",
    "compliance",
    "cmmc",
    "fedramp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "click>=8.0",
    "tabulate>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
pytest = [
    "pytest>=7.0",
]
agents = [
    "jinja2>=3.0",
]
github = [
    "PyGithub>=2.0",
]
jira = [
    "jira>=3.0",
]
mcp = [
    "mcp>=0.1.0",
]
all = [
    "rtmx[agents,github,jira,mcp]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pandas-stubs>=2.0",
    "build>=1.0",
    "twine>=4.0",
    "types-PyYAML>=6.0",
    "pdoc>=14.0",
]

[project.scripts]
rtmx = "rtmx.cli.main:main"

[project.entry-points.pytest11]
rtmx = "rtmx.pytest.plugin"

[project.urls]
Homepage = "https://github.com/iotactical/rtmx"
Documentation = "https://github.com/iotactical/rtmx#readme"
Repository = "https://github.com/iotactical/rtmx"
Issues = "https://github.com/iotactical/rtmx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rtmx"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "ARG", "SIM117"]  # Allow imports after mocking, unused fixture args, nested with

[tool.ruff.lint.isort]
known-first-party = ["rtmx"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tabulate.*", "click.*", "github.*", "mcp.*", "jira.*", "pytest.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=rtmx --cov-report=term-missing"
markers = [
    "req(id): Link test to RTM requirement ID",
    "scope_unit: Single component isolation test",
    "scope_integration: Multi-component interaction test",
    "scope_system: End-to-end system test",
    "technique_nominal: Typical operating parameters",
    "technique_parametric: Parameter space exploration",
    "technique_monte_carlo: Random scenario testing",
    "technique_stress: Boundary/edge case testing",
    "env_simulation: Pure software synthetic signals",
    "env_hil: Hardware-in-loop testing",
    "env_anechoic: RF characterization",
    "env_static_field: Outdoor stationary targets",
    "env_dynamic_field: Outdoor moving targets",
]

[tool.coverage.run]
source = ["src/rtmx"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
