[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtmx"
version = "0.0.6"
description = "Requirements Traceability Matrix toolkit for GenAI-driven development"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "ioTACTICAL LLC", email = "dev@rtmx.ai" }
]
keywords = [
    "requirements",
    "traceability",
    "rtm",
    "testing",
    "compliance",
    "cmmc",
    "fedramp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0",
    "pydantic>=2.0",
    "click>=8.0",
    "tabulate>=0.9",
    "pyyaml>=6.0",
    "typing_extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
rich = [
    "rich>=13.0",
]
pytest = [
    "pytest>=7.0",
]
agents = [
    "jinja2>=3.0",
]
github = [
    "PyGithub>=2.0",
]
jira = [
    "jira>=3.0",
]
mcp = [
    "mcp>=0.1.0",
]
tui = [
    "textual>=0.47.0",
]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.0",
    "watchfiles>=0.21.0",
]
sync = [
    "pycrdt>=0.10.0",
    "websockets>=12.0",
]
bdd = [
    "pytest-bdd>=7.0",
    "gherkin-official>=24.0",
]
all = [
    "rtmx[rich,agents,github,jira,mcp,tui,web,sync,bdd]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",  # Async test support
    "pytest-bdd>=7.0",  # BDD with Gherkin
    "gherkin-official>=24.0",  # Gherkin parser
    "ruff>=0.8.0,<0.9.0",  # Pin to match pre-commit config
    "mypy>=1.0",
    "pandas-stubs>=2.0",
    "build>=1.0",
    "twine>=4.0",
    "types-PyYAML>=6.0",
    "pdoc>=14.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "textual>=0.47.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "watchfiles>=0.21.0",
    "httpx>=0.27.0",  # For testing FastAPI
    "pycrdt>=0.10.0",  # CRDT for sync
    "websockets>=12.0",  # WebSocket client for sync
]
test-browser = [
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

[project.scripts]
rtmx = "rtmx.cli.main:main"

[project.entry-points.pytest11]
rtmx = "rtmx.pytest.plugin"

[project.urls]
Homepage = "https://rtmx.ai"
Documentation = "https://rtmx.ai/quickstart"
Repository = "https://github.com/rtmx-ai/rtmx"
Issues = "https://github.com/rtmx-ai/rtmx/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rtmx"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "ARG", "SIM117"]  # Allow imports after mocking, unused fixture args, nested with

[tool.ruff.lint.isort]
known-first-party = ["rtmx"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tabulate.*", "click.*", "github.*", "mcp.*", "jira.*", "pytest.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=rtmx --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "req(id): Link test to RTM requirement ID",
    "scope_unit: Single component isolation test",
    "scope_integration: Multi-component interaction test",
    "scope_system: End-to-end system test",
    "technique_nominal: Typical operating parameters",
    "technique_parametric: Parameter space exploration",
    "technique_monte_carlo: Random scenario testing",
    "technique_stress: Boundary/edge case testing",
    "env_simulation: Pure software synthetic signals",
    "env_hil: Hardware-in-loop testing",
    "env_anechoic: RF characterization",
    "env_static_field: Outdoor stationary targets",
    "env_dynamic_field: Outdoor moving targets",
    # BDD component markers
    "cli: CLI command tests",
    "sync: Sync/collaboration tests",
    "web: Web UI tests",
]

[tool.coverage.run]
source = ["src/rtmx"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
